@@ -1,5 +1,10 @@
 2015-11-28  Jim Fowler  <jrf@Biblion>
 
+	* Tools/collection/mainWindow.py (Collection.selectVendor): added
+	code to get lists of Authors, Vendors, Projects, and ToDo Tasks
+	into a generic selection window. Modified books, mainWindow.py,
+	sql.py and database.py
+
 	* Tools/scripts/CreateViews.sql: modifed viewAllToDoTasks
 	to return Summary and ToDoId rather than all fields.
 
